- Defaulting max allowed packet to 1024 to account for the possible case where the
  value doesn't come in as a server variable  
- fixed bug #39728 by making MySqlConnectionStringBuilder.GetConnectionString an internal method.
  It should not have been publicly available anyway.  It is used internally by the 
  MySqlConnection.ConnectionString property
  
Version 5.2.3 - 8/14/08
- Increased the speed of MySqlDataReader.GetOrdinal dramatically by using a couple
  of hashes for lookups
- Fixed problem where some tables that support the web providers used the latin1
  character set instead of the database default.  (bug #36444) 
- Changed how the procedure schema collection is retrieved.  If 'use procedure bodies=true'
  then we select on the mysql.proc table directly as this is up to 50x faster than our current
  IS implementation.  If 'use procedure bodies=false', then the IS collection is queried.
  (bug #36694)
- Fixed problem with our GetOrdinal speedup where we would attempt to add an already existing
  key to a hash when a resultset had more than 1 column with the same name. (bug #37239)    
- small fix to how we were allowing in/out and out parameters to slide through parameter 
  serialization.  Before we were setting the AllowUserVariables connection setting but that 
  had the unfortunate side effect of setting the value for all connections that shared that 
  connection string.  This way we isolate it just to our particular command.  
  This may fix bug #37104    
- Fixed documentation surrounding use of ? vs @ for parameters (bug #37349)
- Reduced network traffic for the normal case where the web provider schema is up
  to date (bug #37469)
- Improved error reporting when a timeout occurs.  It no longer uses a message like 
  'reading from stream failed'.  (bug #38119)
- fixed problem where adding a non-existent user to a role would not auto-create the 
  user record (bug #38243)